# GuitarEffector

./: .clangd  .gitignore  CMakeLists.txt  GuitarEffector.jucer
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/EffectBlock/: EffectBlock.h  GainBlock.h  OverDriveBlock.h  ReverbBlock.h
